--- a/package.json
+++ b/package.json
@@ -42,24 +42,19 @@
     "wagmi": ">=1.3.x",
     "react": ">=17",
     "react-dom": ">=17",
-    "viem": ">=1.1.7",
-    "@privy-io/wagmi-connector": ">=0.1.8",
-    "@privy-io/react-auth": ">=1.33.x"
+    "viem": ">=1.1.7"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@zerodev/sdk": "4.5.4",
-    "@zerodev/web3auth": "4.5.3",
     "ethers": "5.7.2"
   },
   "devDependencies": {
     "viem": "^1.16.6",
     "wagmi": "^1.4.4",
     "@types/react": "^18.2.0",
-    "typescript": "^5.2.2",
-    "@privy-io/wagmi-connector": "0.1.5-beta.3",
-    "@privy-io/react-auth": "^1.33.0"
+    "typescript": "^5.2.2"
   },
   "description": ""
 }
