--- a/package.json
+++ b/package.json
@@ -39,22 +39,25 @@
   },
   "peerDependencies": {
     "@wagmi/core": ">=1.3.x",
-    "wagmi": ">=1.3.x",
     "react": ">=17",
     "react-dom": ">=17",
-    "viem": ">=1.1.7"
+    "viem": ">=1.1.7",
+    "wagmi": ">=1.3.x"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@web3auth/no-modal": "^7.2.1",
+    "@web3auth/openlogin-adapter": "^7.2.1",
     "@zerodev/sdk": "4.5.4",
-    "ethers": "5.7.2"
+    "ethers": "5.7.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "viem": "^1.16.6",
-    "wagmi": "^1.4.4",
     "@types/react": "^18.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "viem": "^1.16.6",
+    "wagmi": "^1.4.4"
   },
   "description": ""
 }
